# aiocpa

./: .gitignore  LICENSE.txt  README.md  doc_requirements.txt  pyproject.toml  readthedocs.yml
.github/workflows/: code_quality.yml
aiocpa/: __init__.py  exceptions.py  loggers.py
aiocpa/client/: api_server.py  client.py  client.pyi
aiocpa/client/session/: __init__.py  aiohttp.py  base.py
aiocpa/enums/: __init__.py  asset.py  check_status.py  currency_type.py  invoice_status.py  paid_btn_name.py  update_type.py
aiocpa/methods/: base.py  create_check.py  create_invoice.py  delete_check.py  delete_invoice.py  get_balance.py  get_checks.py  get_currencies.py  get_exchange_rates.py  get_invoices.py  get_me.py  get_stats.py  get_transfers.py  transfer.py
aiocpa/polling/: __init__.py  manager.py
aiocpa/tools/: __init__.py  delete_all_checks.py  delete_all_invoices.py  exchange.py  get_balance_by_asset.py  get_invoice.py
aiocpa/types/: __init__.py  app.py  app_stats.py  balance.py  base.py  base.pyi  check.py  check.pyi  currency.py  exchange_rate.py  invoice.py  invoice.pyi  transfer.py  update.py
aiocpa/utils/: list_serializer.py  sync.py
aiocpa/webhook/: base.py  flask_manager.py
cryptopay/: __init__.py  __meta__.py  exceptions.py
cryptopay/client/: __init__.py  api_server.py  client.py  client.pyi
cryptopay/client/session/: aiohttp.py  base.py
cryptopay/enums/: __init__.py  asset.py  check_status.py  currency_type.py  fiat.py  invoice_status.py  paid_btn_name.py  update_type.py
cryptopay/methods/: __init__.py  base.py  create_check.py  create_invoice.py  delete_check.py  delete_invoice.py  get_balance.py  get_checks.py  get_currencies.py  get_exchange_rates.py  get_invoices.py  get_me.py  get_stats.py  get_transfers.py  transfer.py
cryptopay/polling/: manager.py
cryptopay/tools/: __init__.py  delete_all_checks.py  delete_all_invoices.py  exchange.py  get_balance_by_asset.py
cryptopay/types/: __init__.py  app.py  balance.py  base.py  base.pyi  check.py  check.pyi  currency.py  exchange_rate.py  invoice.py  invoice.pyi  transfer.py  update.py
cryptopay/utils/: __init__.py  list_serializer.py  propagating_thread.py  sync.py
cryptopay/webhook/: __init__.py  aiohttp_manager.py  base.py  fastapi_manager.py
docs/: conf.py  enums.rst  errors.rst  index.rst  install.rst  types.rst
docs/_static/: extra.css
docs/api/: api_server.rst  index.rst  session.rst
docs/client/: index.rst  methods.rst  polling.rst  tools.rst  webhook.rst
docs/examples/: aiogram2.rst  aiogram3.rst  check.rst  index.rst  invoice.rst  ptb.rst  pyrogram.rst  pytba.rst  telethon.rst
docs/integration_examples/: index.rst  pyrogram.rst  pytba_async.rst
examples/: aiogram2.py  aiogram3.py  api_server.py  check_object.py  exchange.py  get_balance_by_asset.py  get_invoice.py  invoice_object.py  polling.py  polling_config.py  ptb.py  pyro.py  pytba.py  pytba_async.py  quick_start.py  sync.py  telethon_example.py  webhook_aiohttp.py  webhook_fastapi.py  webhook_flask.py
